# TTS-Dataset-Maker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  data_processor.py  denoiser.py  env.example  install_dependencies.py  label_studio_config.xml  main.py  metadata_generator.py  processor.py  pyproject.toml  requirements.txt  setup.py  test_setup.py  tts_dataset_maker.py  ui_components.py  youtube_processor.py
archive/: COMPLETE_WORKFLOW.md  README.md  assemblyai_client.py  audio_processor.py  audio_segmenter.py  config.py  dataset_manager.py  huggingface_utils.py  install_dependencies.py  metadata_generator.py  production_storage.py  quality_control.py  requirements.txt  speaker_alignment.py  speech_annotation_ui.py  tts_dataset_maker.py  tts_service.py  voice_activity_detector.py
configs/: dataset.json  example_config.md
dataset/mock_demo/: normalized_transcript_ms.json
scripts/: mock_segmentation_demo.py  process.py  serve_static.py
src/tts_pipeline/: __init__.py
src/tts_pipeline/config/: __init__.py  settings.py
src/tts_pipeline/integrations/: __init__.py  assemblyai.py  database.py  label_studio.py
src/tts_pipeline/models/: __init__.py  audio.py  dataset.py  transcription.py
src/tts_pipeline/tasks/: __init__.py  audio_processing.py  dataset_export.py  denoising.py  segmentation.py
